--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,8 @@
         </ul>
       </div>
     </nav>
-    <%= yield %>
+    <div class="container">
+     <%= yield %>
+    </div>
   </body>
 </html>
