--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>UniApp</title>
+    <title>Uni Toons</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -12,11 +12,11 @@
     <nav>
       <div class="container">
         <div class="nav-wrapper">
-          <a href="#" class="brand-logo right">Logo</a>
+          <a href="#" class="brand-logo right">Uni Toons</a>
           <ul id="nav-mobile" class="left hide-on-med-and-down">
-            <li><a href="sass.html">Sass</a></li>
-            <li><a href="badges.html">Components</a></li>
-            <li><a href="collapsible.html">JavaScript</a></li>
+            <li><a href="sass.html">Courses</a></li>
+            <li><a href="badges.html">Enrollments</a></li>
+            <li><a href="collapsible.html">Account</a></li>
           </ul>
         </div>
       </div>
