--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,21 +9,27 @@
   </head>
 
   <body>
-    <nav>
-      <div class="container">
-        <div class="nav-wrapper">
-          <a href="#" class="brand-logo right">Uni Toons</a>
-          <ul id="nav-mobile" class="left hide-on-med-and-down">
-            <li><a href="sass.html">Courses</a></li>
-            <li><a href="badges.html">Enrollments</a></li>
-            <li><a href="collapsible.html">Account</a></li>
-          </ul>
+    <header>
+      <nav>
+        <div class="container">
+          <div class="nav-wrapper">
+            <a href="#" class="brand-logo right">Uni Toons</a>
+            <ul id="nav-mobile" class="left hide-on-med-and-down">
+              <li><a href="sass.html">Courses</a></li>
+              <li><a href="badges.html">Enrollments</a></li>
+              <li><a href="collapsible.html">Account</a></li>
+            </ul>
+          </div>
         </div>
+      </nav>
+    </header>
+
+    <main>
+      <div class="container">
+        <%= yield %>
       </div>
-    </nav>
-    <div class="container">
-      <%= yield %>
-    </div>
+    </main>
+    
     <footer class="page-footer">
       <div class="container">
         <div class="row">
