navbar hamburger icon on mobile collapse

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
         <div class="container">
           <div class="nav-wrapper">
             <a href="#" class="brand-logo right">Uni Toons</a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul id="nav-mobile" class="left hide-on-med-and-down">
               <li><a href="sass.html">Courses</a></li>
               <li><a href="badges.html">Enrollments</a></li>
