--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,11 @@
               <li><a href="badges.html">Enrollments</a></li>
               <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Account<i class="material-icons right">arrow_drop_down</i></a></li>
             </ul>
+            <ul class="sidenav" id="mobile-demo">
+              <li><a href="sass.html">Courses</a></li>
+              <li><a href="badges.html">Enrollment</a></li>
+              <li><a href="collapsible.html">Account</a></li>
+            </ul>
           </div>
         </div>
       </nav>
