--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,12 @@
         <li class="divider"></li>
         <li><a href="#!">three</a></li>
       </ul>
+      <ul id="dropdown2" class="dropdown-content">
+        <li><a href="#!">one</a></li>
+        <li><a href="#!">two</a></li>
+        <li class="divider"></li>
+        <li><a href="#!">three</a></li>
+      </ul>
       <nav>
         <div class="container">
           <div class="nav-wrapper">
@@ -29,7 +35,7 @@
             <ul class="sidenav" id="mobile-demo">
               <li><a href="sass.html">Courses</a></li>
               <li><a href="badges.html">Enrollment</a></li>
-              <li><a href="collapsible.html">Account</a></li>
+              <li><a class="dropdown-trigger" href="#!" data-target="dropdown2">Account<i class="material-icons right">arrow_drop_down</i></a></li>
             </ul>
           </div>
         </div>
