--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -5,11 +5,24 @@
 </div>
 
 <div class="row">
-  <div class="col s12 m6">
+  <div class="col s6 m6">
     <div class="card blue-grey darken-1">
       <div class="card-content white-text">
         <span class="card-title">CS111: Intro to Computer Science</span>
-        <p>A bruising introduction to computer science that will leave you reeling.</p>
+        <p>A bruising intro that will leave you reeling.</p>
+      </div>
+      <div class="card-action">
+        <a href="#">Enroll</a>
+        <a href="#">Info</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="col s6 m6">
+    <div class="card blue-grey darken-1">
+      <div class="card-content white-text">
+        <span class="card-title">CS112: Mastering Computer Science</span>
+        <p>You'll be begging for mercy after this one.</p>
       </div>
       <div class="card-action">
         <a href="#">Enroll</a>
@@ -19,17 +32,3 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="col s12 m6">
-    <div class="card blue-grey darken-1">
-      <div class="card-content white-text">
-        <span class="card-title">CS112: Mastering Computer Science</span>
-        <p>You'll be begging for mercy.</p>
-      </div>
-      <div class="card-action">
-        <a href="#">Enroll</a>
-        <a href="#">Info</a>
-      </div>
-    </div>
-  </div>
-</div>
