--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -5,30 +5,19 @@
 </div>
 
 <div class="row">
-  <div class="col s6 m6">
-    <div class="card blue-grey darken-1">
-      <div class="card-content white-text">
-        <span class="card-title">CS111: Intro to Computer Science</span>
-        <p>A bruising intro that will leave you reeling.</p>
-      </div>
-      <div class="card-action">
-        <a href="#">Enroll</a>
-        <a href="#">Info</a>
-      </div>
-    </div>
-  </div>
-
-  <div class="col s6 m6">
-    <div class="card blue-grey darken-1">
-      <div class="card-content white-text">
-        <span class="card-title">CS112: Mastering Computer Science</span>
-        <p>You'll be begging for mercy after this one.</p>
-      </div>
-      <div class="card-action">
-        <a href="#">Enroll</a>
-        <a href="#">Info</a>
+  <% Course.all.each do |course| %>
+    <div class="col s6 m6">
+      <div class="card blue-grey darken-1">
+        <div class="card-content white-text">
+          <span class="card-title"><%= course.short_name %>: <%= course.name %></span>
+          <p><%= course.description %></p>
+        </div>
+        <div class="card-action">
+          <a href="#">Enroll</a>
+          <a href="#">Info</a>
+        </div>
       </div>
     </div>
-  </div>
+  <% end %>
 </div>
 
