--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -9,7 +9,8 @@
     <div class="col s6 m6">
       <div class="card blue-grey darken-1">
         <div class="card-content white-text">
-          <span class="card-title"><%= student.name %>: <%= student.email %></span>
+          <span class="card-title">Name: <%= student.name %></span>
+          <p>Email:<%= student.email %></p>
           <p>Course Enrollments: None</p>
         </div>
         <div class="card-action">
