--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -4,22 +4,30 @@
   </div>
 </div>
 
-<div class="row">
-  <%= form_for(@student, html: {class: "col s12"}) do |f| %>
-    <div class="row">
-      <div class="input-field col s12">
-        <%= f.text_field :name, placeholder: "Enter your full name", autofocus: true %>
-        <%= f.label :name %>
+<div class="container">
+  <div class="row center">
+    <div class="col s12 m12 l12">
+      <div class="card-panel">
+        <div class="row">
+          <%= form_for(@student, html: {class: "col s12"}) do |f| %>
+            <div class="row">
+              <div class="input-field col s12">
+                <%= f.text_field :name, placeholder: "Enter your full name", autofocus: true %>
+                <%= f.label :name %>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="input-field col s12">
+                <%= f.email_field :email, placeholder: "Enter your email address" %>
+                <%= f.label :email %>
+              </div>
+            </div>
+
+            <%= f.submit "Submit" %>
+          <% end %>
+        </div>
       </div>
     </div>
-
-    <div class="row">
-      <div class="input-field col s12">
-        <%= f.email_field :email, placeholder: "Enter your email address" %>
-        <%= f.label :email %>
-      </div>
-    </div>
-
-    <%= f.submit "Submit" %>
-  <% end %>
+  </div>
 </div>
