--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,13 +1,8 @@
-<div class="row">
-  <div class="col s12">
-    <h3 class="center-align">Sign Up!</h3>
-  </div>
-</div>
-
 <div class="container">
   <div class="row center">
     <div class="col s12 m12 l12">
       <div class="card-panel">
+        <h3 class="header">Sign Up</h3>
         <div class="row">
           <%= form_for(@student, html: {class: "col s12"}) do |f| %>
             <div class="row">
