style new student button

--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -19,7 +19,12 @@
               </div>
             </div>
 
-            <%= f.submit "Submit" %>
+            <div class="row">
+              <div class="input-field col s12">
+                <%= f.submit "Submit", class: "btn orange waves-effect waves-light right" %>
+              </div>
+            </div>
+
           <% end %>
         </div>
       </div>
