--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row center">
+  <div class="row center sign-up-form">
     <div class="col s12 m12 l12">
       <div class="card-panel">
         <h3 class="header">Sign Up</h3>
