whitelist name & email for new student creation

--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -21,7 +21,7 @@
 
             <div class="row">
               <div class="input-field col s12">
-                <%= f.submit "Submit", class: "btn orange waves-effect waves-light right" %>
+                <%= f.submit "Sign Up", class: "btn orange waves-effect waves-light right" %>
               </div>
             </div>
 
