fix closing tags in new student form error message card

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -29,4 +29,16 @@
       </div>
     </div>
   </nav>
+
+  <div class="container">
+    <div class="row sign-up-form">
+      <div class="col s12 m12 l12">
+        <div class="card-panel red lighten-2">
+          <span class="white-text">
+           
+          </span>
+        </div>
+      </div>
+    </div>
+  </div>
 </header>
