--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -30,15 +30,17 @@
     </div>
   </nav>
 
-  <div class="container">
-    <div class="row sign-up-form">
-      <div class="col s12 m12 l12">
-        <div class="card-panel red lighten-2">
-          <span class="white-text">
-           
-          </span>
+  <% flash.each do |key, message| %>
+    <div class="container">
+      <div class="row sign-up-form">
+        <div class="col s12 m12 l12">
+          <div class="card-panel red lighten-2">
+            <span class="white-text">
+              <%= message %>
+            </span>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+  <% end %>
 </header>
