--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -23,7 +23,21 @@
 
             <div class="row">
               <div class="input-field col s12">
-                <%= f.submit(@student.new_record? ? "Sign Up" : "Submit Updates", class: "btn orange waves-effect waves-light right") %>
+                <%= f.password_field :password, placeholder: "Choose a password" %>
+                <%= f.label :password %>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="input-field col s12">
+                <%= f.password_field :password_confirmation, placeholder: "Confirm your password" %>
+                <%= f.label :confirm_password %>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="input-field col s12">
+                <%= f.button(@student.new_record? ? '<i class="material-icons right">arrow_forward</i>Sign Up'.html_safe : '<i class="material-icons right">arrow_forward</i>Submit Changes'.html_safe, class: "btn orange waves-effect waves-light right") %>
               </div>
             </div>
 
