--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -17,21 +17,21 @@
             <div class="row">
               <div class="input-field col s12">
                 <%= f.email_field :email, placeholder: "Enter your email address" %>
-                <%= f.label :email %>
+                <%= f.label :email, class: "active" %>
               </div>
             </div>
 
             <div class="row">
               <div class="input-field col s12">
                 <%= f.password_field :password, placeholder: "Choose a password" %>
-                <%= f.label :password %>
+                <%= f.label :password, class: "active" %>
               </div>
             </div>
 
             <div class="row">
               <div class="input-field col s12">
                 <%= f.password_field :password_confirmation, placeholder: "Confirm your password" %>
-                <%= f.label :confirm_password %>
+                <%= f.label :confirm_password, class: "active" %>
               </div>
             </div>
 
