--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,16 +14,20 @@
   <nav>
     <div class="container">
       <div class="nav-wrapper">
-        <a href="#" class="brand-logo right">Uni Toons</a>
+        <%= link_to "Uni Toons", root_path, class: "brand-logo right" %>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul id="nav-mobile" class="left hide-on-med-and-down">
-          <li><a href="sass.html">Courses</a></li>
-          <li><a href="badges.html">Enrollments</a></li>
+          <li><%= link_to "Courses", root_path %></li>
+          <% if logged_in? %>
+            <li><%= link_to "Students", students_path %></li>
+          <% end %>
           <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Account<i class="material-icons right">arrow_drop_down</i></a></li>
         </ul>
         <ul class="sidenav" id="mobile-demo">
-          <li><a href="sass.html">Courses</a></li>
-          <li><a href="badges.html">Enrollment</a></li>
+          <li><%= link_to "Courses", root_path %></li>
+          <% if logged_in? %>
+            <li><%= link_to "Students", students_path %></li>
+          <% end %>
           <li><a class="dropdown-trigger" href="#!" data-target="dropdown2">Account<i class="material-icons right">arrow_drop_down</i></a></li>
         </ul>
       </div>
