--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -15,6 +15,8 @@
         <div class="card-action">
           <a href="#">Enroll</a>
           <a href="#">Info</a>
+          <i class="material-icons right">delete</i>
+          <i class="material-icons right">edit</i>
         </div>
       </div>
     </div>
