--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -14,7 +14,7 @@
         </div>
         <div class="card-action">
           <a href="#">Enroll</a>
-          <a href="#">Info</a>
+          <%= link_to "Info", course_path(course) %>
           <i class="material-icons right">delete</i>
           <i class="material-icons right">edit</i>
         </div>
