--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -16,7 +16,7 @@
           <a href="#">Enroll</a>
           <%= link_to "Info", course_path(course) %>
           <i class="material-icons right">delete</i>
-          <i class="material-icons right">edit</i>
+          <%= link_to '<i class="material-icons right">edit</i>'.html_safe, edit_course_path(course) %>
         </div>
       </div>
     </div>
