--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -5,6 +5,12 @@
 </div>
 
 <div class="row">
+  <div class="col s12 center-align">
+    <%= link_to '<i class="material-icons right">add</i>Add New Course'.html_safe, new_course_path, class: "waves-effect waves-light btn" %> 
+  </div>
+</div>
+
+<div class="row">
   <% @courses.each do |course| %>
     <div class="col s6 m6">
       <div class="card blue-grey darken-1">
@@ -15,7 +21,7 @@
         <div class="card-action">
           <a href="#">Enroll</a>
           <%= link_to "Info", course_path(course) %>
-          <i class="material-icons right">delete</i>
+          <%= link_to '<i class="material-icons right">delete</i>'.html_safe, course, method: :delete %>
           <%= link_to '<i class="material-icons right">edit</i>'.html_safe, edit_course_path(course) %>
         </div>
       </div>
