--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -7,6 +7,15 @@
         <p>Description: <%= @course.description %></p>
       </div>
     </div>  
-    <%= link_to '<i class="material-icons right">create</i>Edit this course'.html_safe, edit_course_path(@course), class: "waves-effect waves-light btn" %> 
+
+    <div class="row">
+      <div class="col s6">
+        <%= link_to '<i class="material-icons right">create</i>Edit this course'.html_safe, edit_course_path(@course), class: "waves-effect waves-light btn" %> 
+      </div>
+      <div class="col s6">
+        <%= link_to '<i class="material-icons right">delete</i>Delete this course'.html_safe, @course, method: :delete, class: "waves-effect waves-light btn red" %> 
+      </div>
+    </div>
+    
   </div>
 </div>
