--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -4,11 +4,13 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="col s12 center-align">
-    <%= link_to '<i class="material-icons right">add</i>Add New Course'.html_safe, new_course_path, class: "waves-effect waves-light btn" %> 
+<% if current_user.email == "jonny@jonny.com" %>
+  <div class="row">
+    <div class="col s12 center-align">
+      <%= link_to '<i class="material-icons right">add</i>Add New Course'.html_safe, new_course_path, class: "waves-effect waves-light btn" %> 
+    </div>
   </div>
-</div>
+<% end %>
 
 <div class="row">
   <% @courses.each do |course| %>
