--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -8,14 +8,16 @@
       </div>
     </div>  
 
-    <div class="row">
-      <div class="col s6">
-        <%= link_to '<i class="material-icons right">create</i>Edit this course'.html_safe, edit_course_path(@course), class: "waves-effect waves-light btn" %> 
+    <% if current_user.email == "jonny@jonny.com" %>
+      <div class="row">
+        <div class="col s6">
+          <%= link_to '<i class="material-icons right">create</i>Edit this course'.html_safe, edit_course_path(@course), class: "waves-effect waves-light btn" %> 
+        </div>
+        <div class="col s6">
+          <%= link_to '<i class="material-icons right">delete</i>Delete this course'.html_safe, @course, method: :delete, class: "waves-effect waves-light btn red" %> 
+        </div>
       </div>
-      <div class="col s6">
-        <%= link_to '<i class="material-icons right">delete</i>Delete this course'.html_safe, @course, method: :delete, class: "waves-effect waves-light btn red" %> 
-      </div>
-    </div>
+    <% end %>
     
   </div>
 </div>
