back button in show course page

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -18,6 +18,10 @@
         </div>
       </div>
     <% end %>
+
+    <div class="row">
+      <%= link_to "< Back", courses_path %>
+    </div>
     
   </div>
 </div>
