--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -7,8 +7,15 @@
         <p>Course Enrollments: None</p>
       </div>
     </div>
+
     <% if current_user == @student %>
      <%= link_to '<i class="material-icons right">create</i>Edit your profile'.html_safe, edit_student_path(@student), class: "waves-effect waves-light btn" %>
     <% end %>
+
+    <div class="row">
+      <div class="col s6 m6">
+        <%= link_to "View all students", students_path %>
+      </div>
+    </div>
   </div>
 </div>
