--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -4,7 +4,7 @@
   </div>
 </div>
 
-<% if current_user.email == "jonny@jonny.com" %>
+<% if current_user && current_user.email == "jonny@jonny.com" %>
   <div class="row">
     <div class="col s12 center-align">
       <%= link_to '<i class="material-icons right">add</i>Add New Course'.html_safe, new_course_path, class: "waves-effect waves-light btn" %> 
@@ -21,7 +21,9 @@
           <p><%= course.description %></p>
         </div>
         <div class="card-action">
-          <a href="#">Enroll</a>
+          <% if logged_in? %>
+            <a href="#">Enroll</a>
+          <% end %>
           <%= link_to "Info", course_path(course) %>
           <%= link_to '<i class="material-icons right">delete</i>'.html_safe, course, method: :delete %>
           <%= link_to '<i class="material-icons right">edit</i>'.html_safe, edit_course_path(course) %>
