--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -8,7 +8,7 @@
       </div>
     </div>  
 
-    <% if current_user.email == "jonny@jonny.com" %>
+    <% if current_user && current_user.email == "jonny@jonny.com" %>
       <div class="row">
         <div class="col s6">
           <%= link_to '<i class="material-icons right">create</i>Edit this course'.html_safe, edit_course_path(@course), class: "waves-effect waves-light btn" %> 
