--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -15,14 +15,14 @@
 <div class="row">
   <% @courses.each do |course| %>
     <div class="col s6 m6">
-      <div class="card blue-grey darken-1">
+      <div class="card blue-grey darken-1"> 
         <div class="card-content white-text">
           <span class="card-title"><%= course.short_name %>: <%= course.name %></span>
           <p><%= course.description %></p>
         </div>
         <div class="card-action">
           <% if logged_in? && !(current_user.courses.include?(course)) %>
-            <%= link_to "Enroll", "#" %>
+            <%= link_to "Enroll", course_enroll_path(course_id: course.id), method: :post %>
           <% end %>
           <%= link_to "Info", course_path(course) %>
           <%= link_to '<i class="material-icons right">delete</i>'.html_safe, course, method: :delete %>
